@@ -6,6 +6,7 @@
 	- verbose prints about recursion lame detection and server selection.
 	- fixup BSD port for infra host storage. It hashed wrongly.
 	- fixup makedist snapshot name generation.
+	- do not reopen syslog to avoid dev/log dependency.
 
 17 December 2008: Wouter
 	- follows ldns makedist.sh. -rc option. autom4te dir removed.
